--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -28,10 +28,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':commonlib')
+    compile project(':firebase')
 
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile("org.jetbrains.kotlin:kotlin-stdlib:$VERSION_KOTLIN",
