--- a/things/src/main/AndroidManifest.xml
+++ b/things/src/main/AndroidManifest.xml
@@ -5,12 +5,15 @@
     <application>
         <uses-library android:name="com.google.android.things"/>
 
+        <!-- Launch activity as default from Android Studio -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+            <!-- Launch activity automatically on boot -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
